--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,10 @@
 /* Временные стили добавлять здесь */
+  
+  .border-box {
+    box-sizing: border-box;
+    width: 453px;
+    height: 420px;
+    padding: 24px;
+    border: 1px solid rgba(100, 116, 139, 0.12);
+    border-radius: 8px;
+}
